# codebasedsig

./: .gitignore  CMakeLists.txt  PQCgenKAT_sign.c  README.md  cycles.c  main.c
src/: CMakeLists.txt  api.h  common.c  common.h  decoding.c  decoding.h  matrix.c  matrix.h  parm.h  rm.c  rm.h
